@@ -20,7 +20,6 @@
  */
 
 #include <config.h>
-#include <stdio.h>
 #include <string.h>
 #include <syslog.h>
 #include <sys/types.h>
